Improve general code quality
This commit:
* uses a ci.sh script to perform all CI tasks
* adds cross-compilation logic
* improves Slot to integer conversion handling (thanks to
@george-hopkins)
* adds some deny
* implements Copy, Debug, Clone where needed
* moves tests to the integration test folder
* fixes various lints
* adds credit

Co-authored-by: George Hopkins <george-hopkins@null.net>
Co-authored-by: Joe Ellis <joe.ellis@arm.com>
Co-authored-by: Ionut Mihalcea <ionut.mihalcea@arm.com>
Signed-off-by: Hugues de Valon <hugues.devalon@arm.com>

--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/crate/cryptoki"
 [dependencies]
 libloading = "0.6.1"
 log = "0.4.11"
+derivative = "2.2.0"
 secrecy = "0.7.0"
 psa-crypto = { git = "https://github.com/parallaxsecond/rust-psa-crypto", rev = "18dd4dda96d8b61d2e112b9e6ad83e90fe768d78", default-features = false, optional = true }
 cryptoki-sys = { path = "../cryptoki-sys" }
