--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,6 @@ jobs:
         with:
           toolchain: stable
 
-      # - name: Execute CI script
-      #   run: ./ci.sh
-
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-
       - name: Install SoftHSM
         run: |
           sudo apt-get update -y -qq &&
@@ -28,13 +20,17 @@ jobs:
           mkdir /tmp/tokens
           echo "directories.tokendir = /tmp/tokens" > /tmp/softhsm2.conf
 
-      - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+      - name: Install Rust targets
+        run: |
+          rustup target add armv7-unknown-linux-gnueabi &&
+          rustup target add arm-unknown-linux-gnueabi &&
+          rustup target add aarch64-unknown-linux-gnu
+
+      - name: Test script
         env:
           PKCS11_SOFTHSM2_MODULE: /usr/lib/softhsm/libsofthsm2.so
           SOFTHSM2_CONF: /tmp/softhsm2.conf
+        run: ./ci.sh
 
   links:
     name: Check links
