--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install Rust targets
         run: |
           rustup target add armv7-unknown-linux-gnueabi &&
+          rustup target add armv7-unknown-linux-gnueabihf &&
           rustup target add arm-unknown-linux-gnueabi &&
           rustup target add aarch64-unknown-linux-gnu
 
