--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -17,7 +17,7 @@ log = "0.4.14"
 derivative = "2.2.0"
 secrecy = "0.7.0"
 psa-crypto = { version = "0.8.0", default-features = false, optional = true }
-cryptoki-sys = { path = "../cryptoki-sys" }
+cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.0" }
 
 [dev-dependencies]
 num-traits = "0.2.14"
