--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,10 @@ jobs:
           rustup target add armv7-unknown-linux-gnueabi &&
           rustup target add armv7-unknown-linux-gnueabihf &&
           rustup target add arm-unknown-linux-gnueabi &&
-          rustup target add aarch64-unknown-linux-gnu
+          rustup target add aarch64-unknown-linux-gnu &&
+          rustup target add i686-unknown-linux-gnu &&
+          rustup target add powerpc64-unknown-linux-gnu &&
+          rustup target add powerpc64le-unknown-linux-gnu
 
       - name: Test script
         env:
