--- a/cryptoki-sys/Cargo.toml
+++ b/cryptoki-sys/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/crate/cryptoki"
 
 [build-dependencies]
 bindgen = { version = "0.57.0", optional = true }
+target-lexicon = "0.12.0"
 
 [dependencies]
 libloading = "0.7.0"
