--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cryptoki"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Contributors to the Parsec project"]
 edition = '2018'
 description = "Rust-native wrapper around the PKCS #11 API"
@@ -16,8 +16,8 @@ libloading = "0.7.0"
 log = "0.4.14"
 derivative = "2.2.0"
 secrecy = "0.7.0"
-psa-crypto = { git = "https://github.com/parallaxsecond/rust-psa-crypto.git", rev = "8605006d34944fa880edd3d4d347f460c5585747", default-features = false, optional = true }
-cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.1" }
+psa-crypto = { version = "0.9.0", default-features = false, optional = true }
+cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.2" }
 
 [dev-dependencies]
 num-traits = "0.2.14"
