--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/parallaxsecond/rust-cryptoki"
 documentation = "https://docs.rs/crate/cryptoki"
 
 [dependencies]
+bitflags = "1.3"
 libloading = "0.7.0"
 log = "0.4.14"
 derivative = "2.2.0"
