--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4.14"
 derivative = "2.2.0"
 psa-crypto = { version = "0.9.0", default-features = false, optional = true }
 cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.3" }
+paste = "1.0.6"
 
 [dev-dependencies]
 num-traits = "0.2.14"
