--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,9 @@ jobs:
           rustup target add aarch64-unknown-linux-gnu &&
           rustup target add i686-unknown-linux-gnu &&
           rustup target add powerpc64-unknown-linux-gnu &&
-          rustup target add powerpc64le-unknown-linux-gnu
+          rustup target add powerpc64le-unknown-linux-gnu &&
+          rustup target add x86_64-apple-darwin &&
+          rustup target add aarch64-apple-darwin
 
       - name: Test script
         env:
