--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,8 @@ jobs:
           rustup target add powerpc64-unknown-linux-gnu &&
           rustup target add powerpc64le-unknown-linux-gnu &&
           rustup target add x86_64-pc-windows-msvc &&
-          rustup target add x86_64-apple-darwin
+          rustup target add x86_64-apple-darwin &&
+          rustup target add aarch64-apple-darwin
 
       - name: Test script
         env:
