--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
           rustup target add powerpc64le-unknown-linux-gnu &&
           rustup target add x86_64-pc-windows-msvc &&
           rustup target add x86_64-apple-darwin &&
-          rustup target add aarch64-apple-darwin
+          rustup target add aarch64-apple-darwin &&
+          rustup target add x86_64-unknown-freebsd
 
       - name: Test script
         env:
