--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -16,7 +16,7 @@ bitflags = "1.3"
 libloading = "0.7.0"
 log = "0.4.14"
 derivative = "2.2.0"
-psa-crypto = { version = "0.9.0", default-features = false, optional = true }
+psa-crypto = { git = "https://github.com/parallaxsecond/rust-psa-crypto", rev = "22ebb4d8e479e1c0d853398cf8487d6389b1ed6f", default-features = false, optional = true }
 cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.3" }
 paste = "1.0.6"
 
