Simplify tests using TestResult
This is a follow-up to an old PR #39 and uses packaged-as-a-library
`TestResult` type instead of an ad-hoc struct. The library provides
better diagnostics due to small tweaks on how the error is captured but
is otherwise identical with what the code does currently.

Signed-off-by: Wiktor Kwapisiewicz <wiktor@metacode.biz>

--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -24,6 +24,7 @@ paste = "1.0.6"
 num-traits = "0.2.14"
 hex = "0.4.3"
 serial_test = "0.5.1"
+testresult = "0.2.0"
 
 [features]
 psa-crypto-conversions = ["psa-crypto"]
