--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -22,6 +22,7 @@ cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.4" }
 paste = "1.0.6"
 nix = { version = "0.26.2", optional = true }
 tempfile = { version = "3.3.0", optional = true }
+testresult = "0.2.0"
 
 [dev-dependencies]
 # our own tests rely on the #[hsm_test] macro
