--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -19,6 +19,7 @@ derivative = "2.2.0"
 psa-crypto = { version = "0.9.0", default-features = false, optional = true }
 cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.4" }
 paste = "1.0.6"
+secrecy = "0.8.0"
 
 [dev-dependencies]
 num-traits = "0.2.14"
@@ -29,3 +30,4 @@ testresult = "0.2.0"
 [features]
 psa-crypto-conversions = ["psa-crypto"]
 generate-bindings = ["cryptoki-sys/generate-bindings"]
+serde = ["secrecy/serde"]
