rework the dependency graph
Signed-off-by: Arthur Gautier <arthur.gautier@arista.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,7 @@
 [workspace]
-members = ["cryptoki", "cryptoki-derive", "cryptoki-sys"]
+members = [
+  "cryptoki",
+  "cryptoki-sys",
+  "cryptoki-tests",
+  "cryptoki-tests-derive"
+]
