--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -17,18 +17,12 @@ libloading = "0.7.0"
 log = "0.4.14"
 derivative = "2.2.0"
 psa-crypto = { version = "0.9.0", default-features = false, optional = true }
-cryptoki-derive = { path = "../cryptoki-derive", version = "0.1.0", optional = true }
 cryptoki-sys = { path = "../cryptoki-sys", version = "0.1.4" }
 paste = "1.0.6"
-nix = { version = "0.26.2", optional = true }
-tempfile = { version = "3.3.0", optional = true }
-testresult = "0.2.0"
 
 [dev-dependencies]
 # our own tests rely on the #[hsm_test] macro
-cryptoki-derive = { path = "../cryptoki-derive", version = "0.1.0" }
-nix = { version = "0.26.2" }
-tempfile = { version = "3.3.0" }
+cryptoki-tests = { path = "../cryptoki-tests", version = "0.1.0" }
 
 num-traits = "0.2.14"
 hex = "0.4.3"
@@ -38,4 +32,3 @@ testresult = "0.2.0"
 [features]
 psa-crypto-conversions = ["psa-crypto"]
 generate-bindings = ["cryptoki-sys/generate-bindings"]
-macros = ["cryptoki-derive", "nix", "tempfile"]
