--- a/cryptoki-sys/Cargo.toml
+++ b/cryptoki-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cryptoki-sys"
-version = "0.1.4"
+version = "0.1.6"
 authors = ["Contributors to the Parsec project"]
 edition = '2018'
 description = "FFI wrapper around the PKCS #11 API"
@@ -9,7 +9,7 @@ keywords = ["pkcs11", "cryptoki", "hsm"]
 categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware-support"]
 license = "Apache-2.0"
 repository = "https://github.com/parallaxsecond/rust-cryptoki"
-documentation = "https://docs.rs/crate/cryptoki"
+documentation = "https://docs.rs/crate/cryptoki-sys"
 
 [build-dependencies]
 bindgen = { version = "0.63.0", optional = true }
