--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,17 +4,14 @@ on: [push, pull_request]
 
 jobs:
   # Use the following command to fix words locally:
-  # codespell --ignore-words-list "crate" --skip "*/target,*-sys" --write-changes
+  # codespell --write-changes
   check-spelling:
     name: Check spelling
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Check spelling
-        uses: codespell-project/actions-codespell@master
-        with:
-          ignore_words_list: "crate"
-          path: cryptoki
-          skip: "*/target,*-sys"
+        uses: codespell-project/actions-codespell@v1
 
   formatting:
     name: Check formatting
