--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
           rustup target add arm-unknown-linux-gnueabi &&
           rustup target add aarch64-unknown-linux-gnu &&
           rustup target add i686-unknown-linux-gnu &&
+          rustup target add loongarch64-unknown-linux-gnu &&
           rustup target add powerpc64-unknown-linux-gnu &&
           rustup target add powerpc64le-unknown-linux-gnu &&
           rustup target add x86_64-pc-windows-msvc &&
