Add rust-version to manifest
Signed-off-by: Tomás González <tomasagustin.gonzalezorlando@arm.com>

--- a/cryptoki-sys/Cargo.toml
+++ b/cryptoki-sys/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware
 license = "Apache-2.0"
 repository = "https://github.com/parallaxsecond/rust-cryptoki"
 documentation = "https://docs.rs/crate/cryptoki-sys"
+rust-version = "1.66.0"
 
 [build-dependencies]
 bindgen = { version = "0.66.1", optional = true }
