--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware
 license = "Apache-2.0"
 repository = "https://github.com/parallaxsecond/rust-cryptoki"
 documentation = "https://docs.rs/crate/cryptoki"
+rust-version = "1.66.0"
 
 [dependencies]
 bitflags = "1.3"
