ci: Add workflow dispatch
For running ci builds on particular branches/revs.

Signed-off-by: Tomás González <tomasagustin.gonzalezorlando@arm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Continuous Integration
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   # Use the following command to fix words locally:
