--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,12 @@ on:
   schedule:
     # Every night at midnight
     - cron:  '0 0 * * *'
+  workflow_dispatch:
+    inputs:
+      rev:
+        description: "Revision hash to run against"
+        required: false
+        default: ""
 
 jobs:
   dependencies:
@@ -11,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: "${{ github.event.inputs.rev }}"
       - name: Install latest Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -25,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: "${{ github.event.inputs.rev }}"
       - name: Install latest Rust
         uses: actions-rs/toolchain@v1
         with:
