--- a/cryptoki-rustcrypto/Cargo.toml
+++ b/cryptoki-rustcrypto/Cargo.toml
@@ -14,7 +14,10 @@ repository = "https://github.com/parallaxsecond/rust-cryptoki"
 cryptoki = { path = "../cryptoki", version = "0.6.1" }
 der = "0.7.8"
 ecdsa = "0.16.9"
+p224 = { version = "0.13.2", features = ["pkcs8"] }
 p256 = { version = "0.13.2", features = ["pkcs8"] }
+p384 = { version = "0.13.0", features = ["pkcs8"] }
+k256 = { version = "0.13.2", features = ["pkcs8"] }
 rsa = "0.9"
 signature = { version = "2.2.0", features = ["digest"] }
 sha1 = { version = "0.10", features = ["oid"] }
