--- a/cryptoki-rustcrypto/Cargo.toml
+++ b/cryptoki-rustcrypto/Cargo.toml
@@ -27,6 +27,7 @@ x509-cert = "0.2.4"
 thiserror = "1.0"
 
 [dev-dependencies]
+rand = "0.8.5"
 serial_test = "0.5.1"
 testresult = "0.2.0"
 x509-cert = { version = "0.2.4", features = ["builder"] }
