--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -81,4 +81,7 @@ jobs:
       - name: Install cargo audit
         run: cargo install cargo-audit
       - name: Execute cargo audit
-        run: cargo audit
+        # shlex is currently only being brought by bindgen, which does not use the concerning APIs
+        # except for testing.
+        # TODO: remove when shlex gets updated to >=1.3.0.
+        run: cargo audit --ignore RUSTSEC-2024-0006
