--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -59,6 +59,7 @@ jobs:
           rustup target add aarch64-apple-darwin &&
           rustup target add x86_64-unknown-freebsd
           rustup target add loongarch64-unknown-linux-gnu
+          rustup target add riscv64gc-unknown-linux-gnu
 
       - name: Test script
         env:
