--- a/.github/actions/ci_script/action.yml
+++ b/.github/actions/ci_script/action.yml
@@ -25,7 +25,8 @@ runs:
         rustup target add x86_64-pc-windows-msvc &&
         rustup target add x86_64-apple-darwin &&
         rustup target add aarch64-apple-darwin &&
-        rustup target add x86_64-unknown-freebsd
+        rustup target add x86_64-unknown-freebsd &&
+        rustup target add riscv64gc-unknown-linux-gnu
       shell: bash
 
     - name: Test script
