--- a/cryptoki-rustcrypto/Cargo.toml
+++ b/cryptoki-rustcrypto/Cargo.toml
@@ -12,22 +12,23 @@ repository = "https://github.com/parallaxsecond/rust-cryptoki"
 
 [dependencies]
 cryptoki = { path = "../cryptoki", version = "0.7.0" }
-der = "=0.8.0-pre.0"
-ecdsa = "=0.17.0-pre.5"
-p224 = { version = "=0.14.0-pre", features = ["pkcs8"] }
-p256 = { version = "=0.14.0-pre.0", features = ["pkcs8"] }
-p384 = { version = "=0.14.0-pre", features = ["pkcs8"] }
-k256 = { version = "=0.14.0-pre.0", features = ["pkcs8"] }
-rsa = "=0.10.0-pre.1"
-signature = { version = "=2.3.0-pre.3", features = ["derive", "digest"] }
-sha1 = { version = "=0.11.0-pre.3", features = ["oid"] }
-sha2 = { version = "=0.11.0-pre.3", features = ["oid"] }
-spki = "=0.8.0-pre.0"
-x509-cert = "=0.3.0-pre"
+der = "=0.8.0-rc.1"
+ecdsa = "=0.17.0-pre.9"
+#p224 = { version = "=0.14.0-pre.2", features = ["pkcs8"] }
+p256 = { version = "=0.14.0-pre.2", features = ["pkcs8"] }
+p384 = { version = "=0.14.0-pre.2", features = ["pkcs8"] }
+k256 = { version = "=0.14.0-pre.2", features = ["pkcs8"] }
+pkcs12 = { version = "=0.2.0-pre" }
+rsa = { version = "=0.10.0-pre.3", features = ["sha2"] }
+signature = { version = "=2.3.0-pre.4", features = ["derive", "digest"] }
+sha1 = { version = "=0.11.0-pre.4", features = ["oid"] }
+sha2 = { version = "=0.11.0-pre.4", features = ["oid"] }
+spki = "=0.8.0-rc.1"
+x509-cert = "=0.3.0-pre.0"
 thiserror = "1.0"
 
 [dev-dependencies]
 rand = "0.8.5"
 serial_test = "0.5.1"
 testresult = "0.2.0"
-x509-cert = { version = "=0.3.0-pre", features = ["builder"] }
+x509-cert = { version = "=0.3.0-pre.0", features = ["builder"] }
