--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
-skip = .git,target,Cargo.lock,vendor
+skip = .git,target,Cargo.lock,vendor,CHANGELOG.md
 ignore-words-list = crate,keypair
