--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -17,7 +17,7 @@ bitflags = "1.3"
 libloading = "0.8.6"
 log = "0.4.14"
 cryptoki-sys = { path = "../cryptoki-sys", version = "0.3.0" }
-paste = "1.0.6"
+paste = { path = "../paste", version = "1.0.6" }
 secrecy = "0.8.0"
 
 [dev-dependencies]
