Add `cargo check` before running tests
Signed-off-by: Wiktor Kwapisiewicz <wiktor@metacode.biz>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,8 @@ jobs:
           echo "directories.tokendir = /tmp/tokens" > /tmp/softhsm2.conf
       - name: Install Rust target
         run: rustup target add ${{ matrix.target }}
+      - name: Check
+        run: cargo check --target ${{ matrix.target }} --workspace --all-targets
       - name: Test script
         env:
           TEST_PKCS11_MODULE: /usr/lib/softhsm/libsofthsm2.so
