Continue other matrix jobs on one job error
Signed-off-by: Wiktor Kwapisiewicz <wiktor@metacode.biz>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
   build:
     name: Execute CI script
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       matrix:
         target:
