Extract lints job
Signed-off-by: Wiktor Kwapisiewicz <wiktor@metacode.biz>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,14 @@ jobs:
       - name: Check formatting
         run: cargo fmt --all -- --check
 
+  lints:
+    name: Check lints
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check formatting
+        run: cargo clippy --all-targets -- -D clippy::all -D clippy::cargo
+
   docs:
     name: Check documentation
     runs-on: ubuntu-latest
@@ -30,7 +38,7 @@ jobs:
         run: RUSTDOCFLAGS="-Dwarnings" cargo doc --document-private-items --no-deps
 
   check:
-    name: Check
+    name: Check for errors
     runs-on: ubuntu-latest
     continue-on-error: true
     strategy:
@@ -61,10 +69,6 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
       - name: Install Rust target
         run: rustup target add ${{ matrix.target }}
-      - name: Check formatting
-        run: cargo fmt --all -- --check
-      - name: Check lints
-        run: cargo clippy --all-targets -- -D clippy::all -D clippy::cargo
       - name: Check source
         run: cargo check --target ${{ matrix.target }} --workspace --all-targets
       - name: Check all features source
