--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,18 @@ jobs:
       - name: Check all features source
         run: cargo check --target ${{ matrix.target }} --all-features --workspace --all-targets
 
+  check-matrix:
+    name: Check if all checks succeeded
+    if: always()
+    needs:
+      - check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
+
   tests-softhsm:
     name: Run tests against SoftHSM
     runs-on: ubuntu-latest
