--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cryptoki"
-version = "0.10.1"
+version = "0.10.0"
 authors = ["Contributors to the Parsec project"]
 edition = '2021'
 description = "Rust-native wrapper around the PKCS #11 API"
@@ -13,14 +13,15 @@ documentation = "https://docs.rs/crate/cryptoki"
 rust-version = "1.77"
 
 [dependencies]
-bitflags = "1.3.2"
+bitflags = "2.9.1"
 libloading = "0.8.8"
 log = "0.4.27"
-cryptoki-sys = { path = "../cryptoki-sys", version = "0.4.1" }
+cryptoki-sys = { path = "../cryptoki-sys", version = "0.4.0" }
 paste = "1.0.15"
 secrecy = "0.10.3"
 
 [dev-dependencies]
+hex = "0.4.3"
 serial_test = "3.2.0"
 testresult = "0.4.1"
 
