Remove ci.sh script to run all from workflow
The ci.sh script was used in the main script, but only to execute cargo
test. It was also used in the nightly workflow but it's not needed since
the same steps are run in the merge workflow.

Signed-off-by: Hugues de Valon <hugues.de-valon@einride.tech>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: cargo fmt --all -- --check
 
   lints:
-    name: Check lints
+    name: Check lints with clippy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -134,10 +134,8 @@ jobs:
         env:
           TEST_PKCS11_MODULE: /usr/lib/softhsm/libsofthsm2.so
           SOFTHSM2_CONF: /tmp/softhsm2.conf
-          TARGET: ${{ matrix.target }}
-          RUST_BACKTRACE: 1
           RUSTFLAGS: "-D warnings"
-        run: ./ci.sh
+        run: RUST_BACKTRACE=1 cargo test --target ${{ matrix.target }}
 
   build-windows:
     name: Build on Windows
