--- a/cryptoki/Cargo.toml
+++ b/cryptoki/Cargo.toml
@@ -24,6 +24,7 @@ secrecy = "0.10.3"
 hex = "0.4.3"
 serial_test = "3.2.0"
 testresult = "0.4.1"
+wycheproof = { version = "0.6.0", features = ["aead"] }
 
 [features]
 generate-bindings = ["cryptoki-sys/generate-bindings"]
