attempt to accelerate CI by shortening OpenSSL compile time
Signed-off-by: Eric Devolder <eric.devolder@gmail.com>

--- a/.github/workflows/kryoptic.yml
+++ b/.github/workflows/kryoptic.yml
@@ -148,7 +148,7 @@ jobs:
         if: ${{ steps.cache.outputs.cache-hit != 'true' }}
         run: |
           pushd ${{ env.KRYOPTIC_OPENSSL_SOURCES }}
-          ./Configure
+          ./Configure no-docs no-tests
           make
 
       - name: Cache OpenSSL 3.5 build
